--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@
 html{
   height: 100vh;
   width: 100vw;
+  overscroll-behavior: none;
+  background-color: black;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -41,7 +45,11 @@ body {
   width: 100%;
   height: 100%;
   background-color: black;
-  scroll-behavior: none;
+  overscroll-behavior: none;
+  padding-top: env(safe-area-inset-top, 0);
+  padding-left: env(safe-area-inset-left, 0);
+  padding-right: env(safe-area-inset-right, 0);
+  padding-bottom: env(safe-area-inset-bottom, 0);
 }
 #root{
   width: 100vw;
