--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -136,7 +136,8 @@
 
 .featureGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  justify-content: center;
   gap: 1.5rem;
   margin-top: 2rem;
 }
@@ -150,6 +151,11 @@
 
 .featureCard h3 {
   margin-bottom: 0.75rem;
+  font-weight: 800;
+}
+
+.icon{
+    color: var(--brand);
 }
 
 /* Call to Action */
