--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -142,6 +142,23 @@
 .signUp:hover {
   text-decoration: underline;
 }
+.success{
+    background-color: green;
+    font-weight: 700;
+    padding: 0.5rem;
+    color: white;
+    margin: 1rem auto;
+}
+
+.error{
+    background-color: rgb(202, 74, 74);
+    font-weight: 700;
+    padding: 0.5rem;
+    color: white;
+    border-radius: 1rem;
+    margin: 1.5rem auto;
+
+}
 
 /* Mobile */
 @media (max-width: 768px) {
@@ -158,5 +175,8 @@
   .btn {
     min-width: 100%;
     font-size: 14px;
+  }
+  .success, .error{
+    width: 80%;
   }
 }
