--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -35,8 +35,9 @@
     width: 35%;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    color: #0b0d10;
     
     
 
@@ -49,6 +50,13 @@
 
 .active{
     color: white;
+    background: #9aa4b2;
+    width: 60px;
+    border-radius: 1rem;
+    padding: 3px 0px;
+    backdrop-filter: blur(8px);
+     background:  color-mix(in oklab, rgb(114, 113, 113), transparent 55%);
+    
 }
 
 a{
@@ -57,14 +65,21 @@ a{
 
 @media (max-width: 768px) {
     .icons {
-        width: 90%;
-        padding-bottom: 0.5rem;
+        width: 100%;
     }
     .footer{
-        padding: 0px 2rem;
-    }
-    .footer {
-        background-color: none;
+        display: block;
+        padding: 10px 2px 1px 2rem ;
+        border-radius: 50px;
+        border: 0.8px solid grey;
+        height: fit-content;
+        background: none;
+        width: 85%;
+        margin-bottom: 2.5vh;
+        margin-left: 7%;
+
+                
+
     }
     .icon{
        color: var(--muted);
