added some styles to the login and register button

--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -24,6 +24,11 @@
   color: var(--text);
 }
 
+hr{
+  color: var(--text);
+  height: 20px;
+}
+
 /* ====== Hero ====== */
 .heroSection {
   text-align: center;
